# vbfcpStatisticsTool

./: .gitignore  .gitmodules  CMakeLists.txt  Combfit.sh  ExtendedMinimizer.cxx  ExtendedMinimizer.hxx  ExtendedModel.cxx  ExtendedModel.hxx  LinkDef.h  PlotPulls.py  README.md  RooMultiVarGaussianHighPrecision.cxx  WildcardList.h  breakdown.cxx  combMyyPlots.cxx  compute_limit_from_scan.cxx  condor_submit.py  cutPostFitBkg.cxx  exe_fitPlots.sh  fit.cxx  genSubmit.sh  log.hxx  loop_readWS.sh  make.sh  plot_logsb.cxx  plot_pulls.cxx  plot_scan.cxx  pulls.cxx  readWS.cxx  readWS_fit.cxx  run_breakdown.cxx  run_fit.cxx  run_pruning.cxx  run_pulls.cxx  run_scan.cxx  scan.cxx  setup.sh  submit_breakdown.py  submit_pulls.py  submit_scan.py  (+5 more)
cmake/Modules/: Eigen.cmake  FindEigen.cmake  FindYamlCpp.cmake  YamlCpp.cmake
configs/: PlotConfigPulls.yaml
include/: ExtendedMinimizer.hxx  ExtendedModel.hxx  LinkDef.h  RooMultiVarGaussianHighPrecision.h  utils.hxx
scripts/: Pvalue.C  Significance.C  TrialsFactor.C
share/: batchjob.sh  lsf_submit.sub  slurm_submit.sub
src/: ExtendedMinimizer.cxx  ExtendedModel.cxx  utils.cxx
